src/test/deca/context/valid/Methodvalid.deca
// Description:
//    Teste method declaration .
//
// Resultats:
//   PASS


class A{
  int x;
  boolean f(){
    boolean y;
    //y = f();
    return f();
  }
}
