src/test/deca/context/invalid/douDecl_method_01_so.deca
class A{
    int x;
    int getX(){
    return x;
    }

    int getX(){
    return 2*x;
    }
}